--- a/connector_syncops/wizards/sync.xml
+++ b/connector_syncops/wizards/sync.xml
@@ -30,6 +30,7 @@
             </header>
             <field name="name"/>
             <field name="currency_id" invisible="1"/>
+            <field name="desc" optional="hide"/>
         </tree>
     </field>
     </record>
