--- a/payment_jetcheckout/views/report.xml
+++ b/payment_jetcheckout/views/report.xml
@@ -49,6 +49,7 @@
                             <p class="mt16 mb4">Available variables;</p>
                             <ul class="list-inline">
                                 <li><code>{{amount_paid}}</code>: Paid Amount</li>
+                                <li><code>{{amount_payment}}</code>: Payment Amount</li>
                                 <li><code>{{amount_commission}}</code>: Commission Amount</li>
                                 <li><code>{{partner_name}}</code>: Partner Name</li>
                                 <li><code>{{payment_date}}</code>: Payment Date</li>
