--- a/payment_student/views/menu.xml
+++ b/payment_student/views/menu.xml
@@ -38,6 +38,9 @@
     <menuitem id="menu_acquirers" name="Payment Settings" parent="menu_conf" sequence="4"/>
     <menuitem id="menu_acquirer" action="payment_jetcheckout_system.action_payment_acquirer" name="Payment Acquirers" parent="menu_acquirers" sequence="1"/>
 
+    <menuitem id="menu_agreements" name="Agreement Settings" parent="menu_conf" sequence="4" groups="payment_system_agreement.group_agreement,base.group_system"/>
+    <menuitem id="menu_agreement" action="payment_system_agreement.action_agreement" name="Agreements" parent="menu_agreements" sequence="1" groups="payment_system_agreement.group_agreement,base.group_system"/>
+ 
     <menuitem id="menu_mail" name="Email Settings" parent="menu_conf" sequence="5"/>
     <menuitem id="menu_mail_template" action="payment_jetcheckout_system.action_mail_template" parent="menu_mail" sequence="1"/>
     <menuitem id="menu_mail_server" action="payment_jetcheckout_system.action_mail_server" parent="menu_mail" sequence="2"/>
