--- a/payment_oco/views/templates.xml
+++ b/payment_oco/views/templates.xml
@@ -128,8 +128,8 @@
                                             <th t-if="company.payment_page_due_base == 'date_due'" class="px-2">Due Date</th>
                                             <th class="px-2">Description</th>
                                             <th class="text-right px-2">Amount</th>
-                                            <th class="text-right px-2">Residual</th>
                                             <th class="text-right px-2">Paid</th>
+                                            <th class="text-right px-2">Residual</th>
                                             <th class="text-center px-2">Document</th>
                                             <th/>
                                         </tr>
@@ -140,9 +140,9 @@
                                                 <td class="px-2"><span t-field="payment.date"/></td>
                                                 <td t-if="company.payment_page_due_base == 'date_due'" class="px-2"><span t-field="payment.due_date"/></td>
                                                 <td class="px-2"><span t-if="payment.description" t-field="payment.description"/></td>
-                                                <td class="text-right px-2"><span t-field="payment.amount"/></td>
-                                                <td class="text-right px-2"><span t-field="payment.residual_amount"/></td>
-                                                <td class="text-right px-2"><span t-field="payment.residual_amount" class="payment-amount-paid"/></td>
+                                                <td class="text-right px-2"><span t-field="payment.amount" class="item-amount-payment"/></td>
+                                                <td class="text-right px-2"><span t-field="payment.paid_amount" class="item-amount-paid"/></td>
+                                                <td class="text-right px-2"><span t-field="payment.residual_amount" class="item-amount-payable"/></td>
                                                 <td class="text-center">
                                                     <form t-if="payment.file" t-att-action="'/p/%s/%s' % (token, payment.id)" method="POST">
                                                         <button type="submit" class="btn btn-outline-danger bg-100 text-danger px-2 py-0 fa fa-file-pdf-o"/>
@@ -153,7 +153,7 @@
                                                 </td>
                                                 <td class="text-center">
                                                     <label t-attf-class="switch mb-0 #{'disabled' if prioritize else ''}">
-                                                        <input type="checkbox" class="payment-items input-switch" t-att-data-id="payment.id" t-att-data-amount="payment.residual_amount" t-att-data-paid="payment.residual_amount" checked="checked" field="payment.item"/>
+                                                        <input type="checkbox" class="payment-items input-switch" t-att-data-id="payment.id" t-att-data-amount="payment.residual_amount" t-att-data-payable="payment.residual_amount" t-att-data-paid="payment.paid_amount" checked="checked" field="payment.item"/>
                                                         <span class="slider round fa"/>
                                                     </label>
                                                 </td>
