--- a/payment_jetcheckout_system/views/view.xml
+++ b/payment_jetcheckout_system/views/view.xml
@@ -40,6 +40,8 @@
                     <group groups="base.group_no_one">
                         <field name="inherit_id" options="{'no_open': True}"/>
                         <field name="company_id" groups="base.group_multi_company,base.group_system" options="{'no_create': True, 'no_open': True}"/>
+                        <field name="uid" class="text-primary font-weight-bold" force_save="1"/>
+                        <!--field name="uid" force_save="1" widget="CopyClipboardChar" options="{'string': 'Copy'}"/>-->
                         <field name="model_data_id" invisible="1"/>
                         <field name="view_id" invisible="1"/>
                         <field name="xml_id" invisible="1"/>
@@ -51,10 +53,10 @@
                         <field name="arch_base" widget="ace" options="{'mode': 'xml'}" required="1"/>
                     </page>
                     <page string="JS" name="architecture">
-                        <field name="arch_js" widget="ace" options="{'mode': 'xml'}"/>
+                        <field name="arch_js" widget="ace" options="{'mode': 'python'}"/>
                     </page>
                     <page string="CSS" name="architecture">
-                        <field name="arch_css" widget="ace" options="{'mode': 'xml'}"/>
+                        <field name="arch_css" widget="ace" options="{'mode': 'python'}"/>
                     </page>
                 </notebook>
             </sheet>
