--- a/payment_jetcheckout_system/views/actions.xml
+++ b/payment_jetcheckout_system/views/actions.xml
@@ -102,6 +102,22 @@
         </p>
     </field>
     </record>
+
+    <record id="action_hook" model="ir.actions.act_window">
+    <field name="name">Payment Hooks</field>
+    <field name="res_model">payment.hook</field>
+    <field name="view_mode">tree,form</field>
+    <field name="search_view_id" ref="search_hook"/>
+    <field name="context">{'active_test': False}</field>
+    <field name="help" type="html">
+        <p class="o_view_nocontent_smiling_face">
+            No hooks yet
+        </p>
+        <p>
+            Created hooks are listed here
+        </p>
+    </field>
+    </record>
     
     <record id="action_plan" model="ir.actions.act_window">
     <field name="name">Payment Plans</field>
