--- a/payment_oco/views/templates.xml
+++ b/payment_oco/views/templates.xml
@@ -55,7 +55,7 @@
                                         <t t-set="language" t-value="request.env['res.lang']._lang_get(request.env.lang)"/>
                                         <div>
                                             <span t-if="currency.position == 'before'" t-esc="currency.symbol"/>
-                                            <input type="text" name="amount" t-att-value="language.format('%.{0}f'.format(currency.decimal_places), currency.round(amount), grouping=True, monetary=True)" field="payment.amount"/>
+                                            <input type="text" name="amount" t-att-value="language.format('%.{0}f'.format(currency.decimal_places), currency.round(amount), grouping=True, monetary=True)" autocomplete="off" field="payment.amount"/>
                                             <span t-if="currency.position == 'after'" t-esc="currency.symbol"/>
                                         </div>
                                     </t>
@@ -108,7 +108,7 @@
                                     </div>
                                     <div class="payment-kanban-checkbox position-absolute border-0">
                                         <label class="checkmark">
-                                            <input type="checkbox" class="payment-all-items" checked="checked" field="payment.items"/>
+                                            <input type="checkbox" class="payment-all-items" checked="checked" autocomplete="off" field="payment.items"/>
                                             <span><i class="fa fa-check"/></span>
                                         </label>
                                     </div>
@@ -153,7 +153,7 @@
                                                 </td>
                                                 <td class="text-center">
                                                     <label t-attf-class="switch mb-0 #{'disabled' if prioritize else ''}">
-                                                        <input type="checkbox" class="payment-items input-switch" t-att-data-id="payment.id" t-att-data-amount="payment.residual_amount" t-att-data-payable="payment.residual_amount" t-att-data-paid="payment.paid_amount" checked="checked" field="payment.item"/>
+                                                        <input type="checkbox" class="payment-items input-switch" autocomplete="off" t-att-data-id="payment.id" t-att-data-amount="payment.residual_amount" t-att-data-payable="payment.residual_amount" t-att-data-paid="payment.paid_amount" checked="checked" field="payment.item"/>
                                                         <span class="slider round fa"/>
                                                     </label>
                                                 </td>
@@ -171,7 +171,7 @@
                                             <td class="text-right align-middle" t-att-colspan="company.payment_page_due_base == 'date_due' and '2' or '1'"><em>Select All</em></td>
                                             <td class="text-center align-middle">
                                                 <label class="switch mb-0">
-                                                    <input type="checkbox" class="payment-all-items" checked="checked" field="payment.items"/>
+                                                    <input type="checkbox" class="payment-all-items" checked="checked" autocomplete="off" field="payment.items"/>
                                                     <span class="slider round fa"/>
                                                 </label>
                                             </td>
