--- a/payment_jetcheckout_system/views/hook.xml
+++ b/payment_jetcheckout_system/views/hook.xml
@@ -30,7 +30,7 @@
                 <group>
                     <group>
                         <field name="type" widget="radio" required="1"/>
-                        <field name="subtype" widget="radio"/>
+                        <field name="subtype" widget="radio" attrs="{'invisible': [('type', '!=', 'transaction')]}"/>
                     </group>
                     <group>
                         <field name="active" widget="boolean_toggle"/>
