--- a/payment_student/views/settings.xml
+++ b/payment_student/views/settings.xml
@@ -23,6 +23,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-12 col-lg-6 o_setting_box">
+                        <div class="o_setting_left_pane">
+                            <field name="system_agreement"/>
+                        </div>
+                        <div class="o_setting_right_pane">
+                            <label for="system_agreement"/>
+                            <div class="text-muted">
+                                Define agreements to facilitate receiving payments
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <h2>Discounts</h2>
                 <div class="row mt16 o_settings_container" id="student_discounts">
