--- a/payment_system_agreement/views/agreement.xml
+++ b/payment_system_agreement/views/agreement.xml
@@ -16,7 +16,9 @@
                 </div>
                 <div class="row ml4 mr4">
                     <div class="col-md-8">
-                        <field name="body" colspan="2" nolabel="1" options="{'codeview': true}"/>
+                        <button type="object" name="open_translations" string="Edit Translations" class="oe_link oe_right oe_edit_only"/>
+                        <field name="body" class="oe_read_only" colspan="2" nolabel="1" widget="html"/>
+                        <field name="arch" class="oe_edit_only" colspan="2" nolabel="1" widget="ace"/>
                     </div>
                     <div class="col-md-4 shadow-sm table-bordered" style="position: sticky; top: 20px; border-radius: 10px;">
                         <separator string="Name"/>
