--- a/payment_jetcheckout_system/views/templates.xml
+++ b/payment_jetcheckout_system/views/templates.xml
@@ -788,7 +788,7 @@
 
     <template id="language_selector" name="Language Selector" inherit_id="portal.language_selector">
         <xpath expr="//a" position="attributes">
-            <attribute name="t-att-href">url_for('//' + request.httprequest.host + request.httprequest.path + '?' + keep_query(), lang_code=lg[0])</attribute>
+            <attribute name="t-att-href">'//' + request.httprequest.host + url_for(request.httprequest.path + '?' + keep_query(), lang_code=lg[0])</attribute>
         </xpath>
     </template>
 </odoo>
