--- a/payment_jetcheckout_system/views/plan.xml
+++ b/payment_jetcheckout_system/views/plan.xml
@@ -73,7 +73,7 @@
     </record>
 
     <record id="plan_wizard" model="ir.ui.view">
-    <field name="name">payment.plan.wizard.supplier.form</field>
+    <field name="name">payment.plan.wizard.form</field>
     <field name="model">payment.plan.wizard</field>
     <field name="arch" type="xml">
         <form>
@@ -98,6 +98,43 @@
             </sheet>
             <footer>
                 <button name="action_confirm" string="Confirm" type="object" class="btn btn-primary"/>
+                <button string="Cancel" special="cancel" class="btn btn-secondary"/>
+            </footer>
+        </form>
+    </field>
+    </record>
+ 
+    <record id="plan_error_wizard" model="ir.ui.view">
+    <field name="name">payment.plan.error.wizard.form</field>
+    <field name="model">payment.plan.error.wizard</field>
+    <field name="arch" type="xml">
+        <form class="o_form_plan_error_wizard">
+            <sheet>
+                <group class="text-center" colspan="2">
+                    <div colspan="2" class="my-3"><i class="fa fa-calendar-plus-o fa-2x text-danger"/></div>
+                    <p colspan="2" class="h3 text-600">You cannot create payment plans with selected payment items</p>
+                    <p colspan="2" class="h5 text-400 mt-2 font-italic">Check table for further information</p>
+                </group>
+                <notebook>
+                    <page string="Errors">
+                        <field name="item_ids" colspan="2" nolabel="1">
+                            <tree>
+                                <field name="parent_id" string="Partner" decoration-bf="1" readonly="1"/>
+                                <field name="amount" readonly="1"/>
+                                <button style="pointer-events: none;" class="bg-transparent border-0 font-weight-bold" attrs="{'invisible': [('plan_exist', '=', False)]}" string="Item has payment plans already"/>
+                                <button style="pointer-events: none;" class="bg-transparent border-0 font-weight-bold" attrs="{'invisible': [('plan_iban_exist', '=', True)]}" string="Partner doesn't have any verified bank account"/>
+                                <field name="currency_id" invisible="1"/>
+                                <field name="plan_exist" invisible="1"/>
+                                <field name="plan_iban_exist" invisible="1"/>
+                            </tree>
+                            <form>
+                                <sheet/>
+                            </form>
+                        </field>
+                    </page>
+                </notebook>
+            </sheet>
+            <footer>
                 <button string="Cancel" special="cancel" class="btn btn-secondary"/>
             </footer>
         </form>
